# thaime-nlp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
benchmarks/word-conversion/: v0.1.0.csv  v0.1.1.csv  v0.2.0.csv
data/corpora/: README.md
data/dictionaries/: component-romanization.yaml
docs/: benchmarks.md  engine-scoring.md  git-workflow.md  handover-ngram-binary-v1.md  handover-release-process.md  releasing.md  research-template.md  research-workflow.md  smoke-test.md
experiments/: 10k_stratified_sample.csv  README.md  spot_check_top50.py  stratified_sample_10k.py  test_tltk_multiprocessing.py  top50_variants.csv  v011_validation_results.csv  validate_v011.py
experiments/001-romanization-source-audit/: 001-romanization-source-audit.md  hypothesis.md  plan.md  results.md
experiments/002-informal-romanization-variants/: hypothesis.md  plan.md  results.md
experiments/003-component-romanization/: 01_component_inventory.py  02_prepare_curation.py  03_validate_benchmark.py
experiments/006-frequency-scoring/: build_test_sets.py  evaluate.py  results.md  results_raw.json  scoring.py  test_set_a.json  test_set_b.json  test_set_c.json
experiments/008-ngram-delivery/: results.md  run_experiment.py
experiments/trie-selection/: benchmark.py  generate_synthetic_data.py
pipelines/: README.md  __init__.py  __main__.py  cache.py  config.py  console.py
pipelines/benchmark-wordconv/: 03_review_cli.py  (+4 more)
research/: index.md
scripts/: build-release.py
src/: variant_generator.py
tests/: test_variant_generator.py
(+117 files in other folders)
