[project]
name = "thaime-nlp"
version = "0.1.0"
description = "NLP research repository for the THAIME project"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    # Core NLP libraries
    "pythainlp>=5.0",
    "tltk>=1.0",
    # Data & serialization
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    # Visualization
    "matplotlib>=3.7",
    # Notebooks
    "jupyter>=1.0",
    "ipykernel>=6.0",
    # Progress bars
    "tqdm>=4.60",
    # AWS (for LLM filter via Bedrock)
    "boto3>=1.28",
    # Testing
    "pytest>=7.0",
]
